--- a/flashcard.html
+++ b/flashcard.html
@@ -5,103 +5,120 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flashcard | AllInEnglish</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #f3f6f9;
-      padding: 20px;
-      min-height: 100vh;
-      box-sizing: border-box;
-    }
-    h2 {
-      color: #1976d2;
-      margin-bottom: 10px;
-    }
-    #topic-name {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 5px;
-      color: #444;
-    }
-    #card-counter {
-      margin-bottom: 15px;
-      font-size: 18px;
-      color: #555;
-    }
-    .card-wrapper {
-      perspective: 1000px;
-      margin-bottom: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .fade-container {
-      transition: opacity 0.3s ease;
-    }
-    .fade-out {
-      opacity: 0;
-    }
-    .fade-in {
-      opacity: 1;
-    }
-    .flashcard {
-      width: 480px;
-      height: 280px;
-      position: relative;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-      cursor: pointer;
-    }
-    .flipped {
-      transform: rotateY(180deg);
-    }
-    .card-face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      font-size: 36px;
-      font-weight: bold;
-      text-align: center;
-      box-sizing: border-box;
-    }
-    .card-front {
-      background-color: #ffffff;
-      color: #333;
-    }
-    .card-back {
-      background-color: #1976d2;
-      color: white;
-      transform: rotateY(180deg);
-    }
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f3f6f9;
+    padding: 20px;
+    min-height: 100vh;
+    box-sizing: border-box;
+  }
+  h2 {
+    color: #1976d2;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  #topic-name {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #444;
+    text-align: center;
+  }
+  #card-counter {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #555;
+    text-align: center;
+  }
+  .card-wrapper {
+    perspective: 1000px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .fade-container {
+    transition: opacity 0.3s ease;
+    width: 100%;
+    max-width: 500px;
+  }
+  .fade-out {
+    opacity: 0;
+  }
+  .fade-in {
+    opacity: 1;
+  }
+  .flashcard {
+    width: 100%;
+    height: 0;
+    padding-top: 58.33%; /* Tỷ lệ 280/480 = 0.5833 */
+    position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+  }
+  .flipped {
+    transform: rotateY(180deg);
+  }
+  .card-face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    font-size: clamp(20px, 5vw, 36px);
+    font-weight: bold;
+    text-align: center;
+    box-sizing: border-box;
+  }
+  .card-front {
+    background-color: #ffffff;
+    color: #333;
+  }
+  .card-back {
+    background-color: #1976d2;
+    color: white;
+    transform: rotateY(180deg);
+  }
+  .controls {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  button {
+    padding: 12px 16px;
+    background-color: #1976d2;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+    flex: 1 1 100px;
+  }
+  button:disabled {
+    background-color: #ccc;
+    cursor: default;
+  }
+  @media (min-width: 600px) {
     button {
-      padding: 12px 20px;
-      background-color: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 18px;
+      flex: unset;
+      min-width: 120px;
     }
-    button:disabled {
-      background-color: #ccc;
-      cursor: default;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <h2>Ôn Tập Từ Vựng</h2>
