--- a/index.html
+++ b/index.html
@@ -1,75 +1,177 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Trang chủ | AllInEnglish</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f0f4f8;
       margin: 0;
       padding: 0;
     }
+
     header {
       background-color: #1976d2;
       color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    main {
-      max-width: 800px;
-      margin: 40px auto;
-      text-align: center;
-    }
-    h1 {
-      color: #1976d2;
-    }
-    .menu {
+      padding: 16px 24px;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
+    }
+
+    .header-left h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .header-right {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    #welcome {
+      font-size: 15px;
+    }
+
+    #account-link {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 15px;
+      background-color: rgba(255, 255, 255, 0.15);
+      padding: 6px 12px;
+      border-radius: 6px;
+      transition: background-color 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    #account-link:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    main {
+      max-width: 960px;
+      margin: 40px auto;
+      padding: 0 16px;
+      text-align: center;
+    }
+
+    h2 {
+      color: #1976d2;
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #555;
+      font-size: 16px;
+    }
+
+    .menu {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 20px;
       margin-top: 30px;
     }
+
     .menu a {
-      display: inline-block;
-      padding: 16px 24px;
+      display: block;
+      padding: 16px;
       background-color: #ffffff;
       border: 1px solid #1976d2;
-      border-radius: 8px;
+      border-radius: 10px;
       text-decoration: none;
       color: #1976d2;
       font-weight: bold;
-      transition: background-color 0.3s, color 0.3s;
+      font-size: 16px;
+      transition: all 0.3s ease;
     }
+
     .menu a:hover {
       background-color: #1976d2;
       color: white;
+      transform: translateY(-3px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        text-align: center;
+      }
+
+      .header-left h1 {
+        font-size: 20px;
+      }
+
+      #welcome {
+        font-size: 14px;
+      }
+
+      #account-link {
+        font-size: 20px;
+        padding: 6px;
+      }
+
+      #account-link span {
+        display: none; /* Ẩn chữ "Tài khoản" */
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+
+      .menu a {
+        font-size: 14px;
+        padding: 18px 12px;
+      }
     }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>AllInEnglish - Học từ vựng TOEIC</h1>
+    <div class="header-left">
+      <h1>All In English - Study English For Everyone</h1>
+    </div>
+    <div class="header-right">
+      <div id="welcome">Xin chào!</div>
+      <a href="./account.html" id="account-link">👤 <span>Tài khoản</span></a>
+    </div>
   </header>
+
   <main>
-    <h2>Chào mừng bạn đến với All In English!</h2>
     <p>Chọn một chức năng để bắt đầu:</p>
     <div class="menu">
       <a href="./topics.html">📚 Quản lý chủ đề</a>
       <a href="./topics.html">🧠 Ôn tập Flashcard</a>
       <a href="#">📝 Trắc nghiệm từ vựng (Đang phát triển)</a>
       <a href="#">📖 Luyện đề (Đang phát triển)</a>
-      <a href="./account.html">👤 Tài khoản</a>
     </div>
   </main>
 
   <script>
-    const loggedInUser = JSON.parse(localStorage.getItem("currentUser"));
-    if (!loggedInUser) {
+    const user = JSON.parse(localStorage.getItem("currentUser"));
+    if (!user) {
       window.location.href = "login.html";
+    } else {
+      const welcomeDiv = document.getElementById("welcome");
+      welcomeDiv.innerText = `Xin chào, ${user.username}!`;
     }
   </script>
 </body>
+
 </html>
