--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     .header-left h1 {
       margin: 0;
       font-size: 24px;
+      pointer-events: none;
+      user-select: none;
     }
 
     .header-right {
